= 2.0.0.89 =
* Badge shortcode for file field %%input%% return file array - FIXED

= 2.0.0.88 =
* Comment images can now be used in Elementor Pro galleries - ADDED
* Post Images widget can show logo if not specifically set not to - FIXED

= 2.0.0.87 =
* Allow show / hide categories in GD > Categories widget - ADDED
* Incorrect validation message attribute on url type custom fields - FIXED
* GD > Listings widget can now use Elementor Pro Archive item template - ADDED

= 2.0.0.85 =
* Embed post not working for GD listing - FIXED
* Add address fields in post meta keys list - ADDED
* [gd_cpt_meta] widget/shortcode added to show cpt meta title, meta description, description, image etc - ADDED
* Check edit listing page & add body class for add/edit listing page - ADDED
* Show image caption and title based on setting - FIXED
* Elementor pro form widget now supports "GD Email Listing" action - ADDED
* Elementor CSS Class display options to be able to hide content dependent on field values - ADDED
* Elementor templates now updated via API call - CHANGED

= 2.0.0.84 =
* Listing Widget – Exclude Current Post - FIXED
* GD title is not working on beaver themer archive template - FIXED
* Font awesome settings icons updated to 5.13.0- UPDATED
* Add body class on add listing, location & archive pages for empty results - ADDED
* Fix add listing shortcode validation on status report - FIXED
* Detail tabs not working on small screens - FIXED
* Elementor number dynamic tags support added - ADDED
* Elementor dynamic content, added some more hidden raw fields - ADDED
* Elementor rating widget support added - ADDED
* Elementor gallery widget support added - ADDED
* Elementor dynamic color tag support added - ADDED
* Elementor pro gallery widget support added - ADDED
* Elementor pro image carousel widget support added - ADDED
* Elementor pro theme builder types added for greater control - ADDED
* Lity lightbox image slideshow shows different image size for some slides - FIXED